--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongoos": "^0.0.1-security",
-    "mongoose": "^8.11.0"
+    "mongoose": "^8.11.0",
+    "validator": "^13.12.0"
   }
 }
